# agentic-devops-sre-demo

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: sre-incident.yml
.github/workflows/: cd.yml  ci.yml  sre-issue-triage.yml
alembic/: env.py
demo/: README.md  generate_traffic.sh
docs/: architecture.md  azure-setup.md  sre-agent-setup.md
infrastructure/: deploy.sh  main.bicep  parameters.json
src/: config.py  database.py  main.py  models.py  schemas.py
src/middleware/: error_handler.py  logging_middleware.py
src/routes/: health.py  tasks.py
tests/: conftest.py  test_health.py  test_tasks.py
